<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp"
    android:layout_marginHorizontal="14dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="10dp"
        android:elevation="3dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            >


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/userId"
                android:text="@string/user_id"
                android:textStyle="bold"
                app:layout_constraintHorizontal_weight="1"
                android:textColor="@color/black"
                android:id="@+id/idLabel"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/userId"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/idLabel"
                app:layout_constraintEnd_toEndOf="parent"/>

             <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idLabel"
                app:layout_constraintEnd_toStartOf="@+id/titleId"
                android:text="@string/title"
                 android:textStyle="bold"
                 android:maxLines="1"
                 android:ellipsize="end"
                 app:layout_constraintHorizontal_weight="1"
                android:id="@+id/titleLabel"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/idLabel"
                android:id="@+id/titleId"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/titleLabel"
                app:layout_constraintEnd_toEndOf="parent"/>

             <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleId"
                app:layout_constraintEnd_toStartOf="@+id/bodyId"
                android:text="@string/body"
                 android:textStyle="bold"
                 app:layout_constraintHorizontal_weight="1"
                android:id="@+id/bodyLabel"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/titleId"
                android:id="@+id/bodyId"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/bodyLabel"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>